tests/expected/test010.semant.err
test010.usc:24:9: error: Use of undeclared identifier 'x'
	while (x > 0)
	       ^
test010.usc:30:1: error: USC requires non-void functions to end with a return
}
^
2 Error(s)
